modules/vpc/main.tf
data "aws_availability_zones" "availability_zones" {
    state = "available"
}

resource "aws_vpc" "app_vpc" {
  cidr_block = var.vpc_cidr_block
  enable_dns_hostnames = var.enable_dns_hostnames

  tags = {
    Name = "${var.vpc_name}"
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.app_vpc.id

  tags = {
    Name = "igw"
  }
}

resource "aws_subnet" "public_subnets" {
  vpc_id = aws_vpc.app_vpc.id

  count = 2
  cidr_block = cidrsubnet(var.vpc_cidr_block, 8, count.index)
  availability_zone = data.aws_availability_zones.availability_zones.names[count.index]

  map_public_ip_on_launch =  true

  tags = {
    Name = "public-subnet-${count.index + 1}"
  }
}

resource "aws_subnet" "private_subnets" {
  vpc_id = aws_vpc.app_vpc.id

  count = 2
  cidr_block = cidrsubnet(var.vpc_cidr_block, 8, 2 + count.index)
  availability_zone = data.aws_availability_zones.availability_zones.names[count.index]

  map_public_ip_on_launch =  false

  tags = {
    Name = "private-subnet-${count.index + 1}"
  }
}

resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.app_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "public-rttable"
  }
}

resource "aws_route_table_association" "public_rt_assoc" {
  count = 2
  subnet_id = element(aws_subnet.public_subnets[*].id, count.index)
  route_table_id = aws_route_table.public_route_table.id
}

resource "aws_route_table" "private_route_table" {
  vpc_id = aws_vpc.app_vpc.id

  count = 2
  route  {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.natgatway[count.index].id
  }

  tags = {
    Name = "private-rttable"
  }
}

resource "aws_route_table_association" "private_rt_assoc" {
  count = 2
  subnet_id = element(aws_subnet.private_subnets[*].id, count.index)
  route_table_id = aws_route_table.private_route_table[count.index].id
}

resource "aws_eip" "eip_natgw" {
  count = 2
}

resource "aws_nat_gateway" "natgatway" {
  count = 2
  allocation_id = aws_eip.eip_natgw[count.index].id
  subnet_id = aws_subnet.public_subnets[count.index].id
}
